# engram-db

./: .gitignore  Cargo.toml  README.md  pyproject.toml
engram-open/: .gitignore  Cargo.toml  package-lock.json  package.json  pyproject.toml
engram-open/examples/: node_example.js
engram-open/src/: lib.rs
examples/: rag_basic.py
src/: mnemo.rs
