[package]
name = "engram"
version = "0.1.0"
edition = "2021"
authors = ["shubhambiswas2196 <shubham.b@techshu.in>"]
description = "High-performance, local-first memory database for LLMs."
license = "MIT"
homepage = "https://github.com/shubhambiswas2196/engram-db"
repository = "https://github.com/shubhambiswas2196/engram-db"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Embeddings (Local ONNX)
fastembed = "4.0"

# Low-Level System (Mnemo Engine)
memmap2 = "0.9"
crc32fast = "1.3"

# Vector Search (HNSW for Pro Scale)
hnsw_rs = "0.3"

# Utils
dotenv = "0.15"

# Bindings
# Python
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

# Node.js
napi = { version = "2.12", features = ["serde-json"], optional = true }
napi-derive = { version = "2.12", optional = true }

# Utils
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
python = ["dep:pyo3"]
node = ["dep:napi", "dep:napi-derive"]
